Scrollbar no longer affects width

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  width: 100vw;
+}
+
 body {
   margin: 0;
   background-color: #dfdfdf;
